--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.396.0",
     "markdown-to-jsx": "^7.4.7",
+    "mongoose": "^8.4.5",
     "next": "14.2.4",
     "next-mdx-remote": "^5.0.0",
     "react": "^18",
